k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
  - host: grafana.34.180.43.175.nip.io

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
